[gd_scene load_steps=4 format=3 uid="uid://cs1lv4bpppvds"]

[ext_resource type="Script" path="res://Dongeon/Spike/spike.gd" id="1_6xvtm"]
[ext_resource type="Texture2D" uid="uid://bctp8t74apbbd" path="res://Assests/Spike/spike_0.png" id="1_gic3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8r7l"]
size = Vector2(69, 63)

[node name="Spike" type="Node2D" groups=["spike"]]
script = ExtResource("1_6xvtm")

[node name="Fadein" type="Timer" parent="."]
wait_time = 0.45
one_shot = true

[node name="Fadeout" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.404511, 0.404511, 0.404511, 0.847059)
scale = Vector2(5, 5)
texture = ExtResource("1_gic3g")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_a8r7l")
debug_color = Color(0.845844, 0.361576, 0.295563, 0.42)

[connection signal="timeout" from="Fadein" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Fadeout" to="." method="_on_fadeout_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
